# PolyglotDB

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  rtd_requirements.txt  setup.cfg  setup.py  tutorial2.py
.github/config/: config.ini  influxdb.conf  neo4j.conf
.github/workflows/: publish-to-test-pypi.yml  pytest.yml  stress-test.yml  stress-testing.yml
annograph/: __init__.py  classes.py  corpus.py  db.py  exceptions.py  helper.py  io.py  utils.py
annograph/graph/: attributes.py  elements.py  func.py  models.py  query.py  util.py
annograph/io/: __init__.py  csv.py  graph.py  helper.py  io.py  multiple_files.py  text_ilg.py  text_spelling.py  text_transcription.py  textgrid.py
annograph/sql/: classes.py  config.py  db.py  models.py  query.py
continuous-integration/travis/: install.sh
docker/v1.3.0/: Dockerfile  config.ini
docker/v1.3.3/: Dockerfile  config.ini
docs/: Makefile  make.bat
docs/source/: ISCANrestart.rst  acoustics.rst  acoustics_backend.rst  acoustics_encoding.rst  acoustics_querying.rst  api_acoustics.rst  api_corpus.rst  api_export.rst  api_graph.rst  api_import.rst  api_inspect.rst  api_io.rst  api_io_helper.rst  api_parsers.rst  api_query.rst  api_types.rst  apireference.rst  case_studies.rst  case_study_duration.rst  case_study_praat.rst  case_study_sibilants.rst  case_study_vowel-dynamics.rst  case_study_vowel_dynamics.rst  changelog.rst  client.rst  concepts.rst  conf.py  developer.rst  developer_acoustics.rst  developer_influxdb_implementation.rst  developer_neo4j_implementation.rst  enrichment.rst  enrichment_csvs.rst  enrichment_hierarchical.rst  enrichment_queries.rst  enrichment_subannotations.rst  enrichment_subset.rst  enrichment_syllables.rst  enrichment_utterances.rst  getting_started.rst  (+41 more)
examples/: COG.praat  acoustic_corpus_acoustics.py  analyze_script_example.py  buckeye_acoustics.py  buckeye_l.py  buckeye_lexicon.py  buckeye_loading.py  buckeye_querying.py  buckeye_word_final_tapping.py  globalphone_loading.py  globalphone_querying.py  raleigh_sibilants_example.py  refined_formants_example.py  timit_loading.py  timit_querying.py
examples/buckeye/: buckeye_acoustics.py  buckeye_l.py  buckeye_lexicon.py  buckeye_loading.py  buckeye_querying.py  buckeye_word_final_tapping.py
examples/formant_analysis/: refined_formants_example.py
examples/praat_scripts/: mean_pitch.praat  mean_pitch_optimized.praat
examples/sibilant_analysis/: COG_middle50percent.praat  analyze_script_example.py  raleigh_sibilants_example.py  sibilant_jane.praat
examples/timit/: timit_loading.py  timit_querying.py
examples/tutorial/: tutorial1.py  tutorial2.py  tutorial3.py  tutorial_1.py  tutorial_1_first_steps.ipynb  tutorial_1_reset.py  tutorial_2.py  tutorial_2_enrichment.ipynb  tutorial_3.py  tutorial_6.py  (+4 more)
polyglotdb/: __init__.py  config.py  corpus.py  exceptions.py  pgdb.py  structure.py  utils.py
tests/: analyze_script_example.py  conftest.py  test_acoustic_graph.py  test_acoustics.py  test_acoustics_formants.py  test_acoustics_intensity.py  test_acoustics_other.py  test_acoustics_pitch.py  test_acoustics_vot.py  test_base.py  test_basic.py  test_classes.py  test_client.py  test_corpus.py  test_discourse_inspect.py  test_enrich.py  test_enrichment.py  test_features.py  test_formants.py  test_graph.py  test_graph_func.py  test_graph_models.py  test_gui_widgets.py  test_helper.py  test_io_buckeye.py  test_io_csv.py  test_io_fave.py  test_io_globalphone.py  test_io_helper.py  test_io_ilg.py  test_io_lexicon.py  test_io_maus.py  test_io_mfa.py  test_io_multiple_files.py  test_io_partitur.py  test_io_speakers.py  test_io_text.py  test_io_text_orthography.py  test_io_text_spelling.py  test_io_text_transcription.py  (+25 more)
(+330 files in other folders)
