[metadata]
name = polyglotdb
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MontrealCorpusTools/PolyglotDB
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Text Processing :: Linguistic
keywords = 
    phonology
    corpus
    phonetics
author = Montreal Corpus Tools
author_email = michael.e.mcauliffe@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires = 
    neo4j
    praatio<=5.0
    textgrid
    conch_sounds
    librosa
    influxdb
    tqdm
    requests
    scipy<=1.12.0
    pywin32; os_name == 'nt'
include_package_data = True

[options.entry_points]
console_scripts =
    pgdb = polyglotdb.pgdb:main

[options.extras_require]
test = pytest

[options.package_data]
polyglotdb = 
    databases/*.conf
    polyglotdb/acoustics/formants/*.praat
