[metadata]
name = polyglotdb
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MontrealCorpusTools/PolyglotDB
author = Montreal Corpus Tools
author_email = michael.e.mcauliffe@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Text Processing :: Linguistic
keywords =
    phonology
    corpus
    phonetics

[options]
packages = find:
install_requires =
    conch-sounds
    influxdb
    librosa
    neo4j
    praatio
    requests
    scipy
    tqdm
    pywin32;os_name == 'nt'
include_package_data = True

[options.entry_points]
console_scripts =
    pgdb = polyglotdb.pgdb:main

[options.extras_require]
test =
    pytest

[options.package_data]
polyglotdb =
    databases/*.conf
    polyglotdb/acoustics/formants/*.praat
